objects/EMPAUALeadly__Leadly_Error_Log__c.object
<CustomObject>
    <label>Leadly Error Log</label>
    <nameField>
        <displayFormat>LEL-{0000}</displayFormat>
        <label>Leadly Error Log number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leadly Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EMPAUALeadly__Error_Timestamp__c</fullName>
        <label>Error Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Records_affected__c</fullName>
        <label>Records affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMPAUALeadly__Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>